[gd_scene load_steps=10 format=3 uid="uid://docergpbnrtt7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bt2jc"]
[ext_resource type="Texture2D" uid="uid://cmct8hdfcvxvg" path="res://assets/player/knight.png" id="1_ha5d7"]
[ext_resource type="PackedScene" uid="uid://dcd72ihkctsg4" path="res://components/hurtbox.tscn" id="3_2lc15"]
[ext_resource type="PackedScene" uid="uid://daytajnd160e8" path="res://components/health_component.tscn" id="3_idoy7"]
[ext_resource type="PackedScene" uid="uid://p7rtwtkyoxl6" path="res://components/hitbox.tscn" id="4_b3pke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3idhp"]
size = Vector2(10, 19)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nxhkp"]
radius = 12.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xivmm"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wu7b4"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_bt2jc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("1_ha5d7")
hframes = 8
vframes = 8

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_3idhp")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_idoy7")]
player = NodePath("..")
MAX_HEALTH = 200.0

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_2lc15")]
collision_layer = 8
collision_mask = 16
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_nxhkp")

[node name="Hitbox" parent="." instance=ExtResource("4_b3pke")]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_xivmm")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeStateMachine_wu7b4")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")

[node name="DashTimeout" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimeout" to="." method="_on_dash_timeout_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
